# KBE

./: .gitignore  .pleaseChangeMeToenv  Dockerfile  Lappenbank.csv  Makefile  README.md  docker-compose.yml  import_csv.py  integration_tests.py  manage.py  nginx.conf  open_api_products_service.yml  open_api_tax_calc_service.yml  pyproject.toml  pytest.ini  run_tests.sh  runservers.py
deploy/: products_csv_exporter.sh  products_csv_importer.sh  products_service_api.sh  tax_calc_api.sh
kbeproject/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
kbeproject/kbeproject/: settings.py  urls.py
products_service/: apps.py  giphy_api_call.py  models.py  serializers.py  tax_calc_api_call.py  views.py
products_service/management/commands/: export_csv.py
products_service/migrations/: 0001_initial.py  0002_add_min_vale_validation_to_product_weight.py
products_service_api/: asgi.py  settings.py  urls.py  wsgi.py
tax_calc/: apps.py  models.py  serializers.py  tax_calculator.py  tax_calculator_unit_tests.py  urls.py  views.py
tax_calc/migrations/: 0001_initial.py
tax_calc/templates/: 400.html  tax_calc.html
tax_calc_api/: asgi.py  settings.py  urls.py  wsgi.py
