[tool.poetry]
name = "kbe"
version = "0.1.0"
description = ""
authors = ["julitschkaa <schaak@posteo.net>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.8"
djangorestframework = "^3.12.4"
requests = "^2.26.0"
uritemplate = "^4.1.1"
PyYAML = "^6.0"
psycopg2 = "^2.9.2"
pytest = "^6.2.5"
pytest-django = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
